--- a/toolkit/mozapps/extensions/test/xpcshell/xpcshell-shared.ini
+++ b/toolkit/mozapps/extensions/test/xpcshell/xpcshell-shared.ini
@@ -21,6 +21,7 @@ skip-if = os == "android"
 [test_blocklistchange.js]
 # Times out during parallel runs on desktop
 requesttimeoutfactor = 2
+[test_blocklist_gfx.js]
 [test_blocklist_prefs.js]
 [test_blocklist_metadata_filters.js]
 # Bug 676992: test consistently hangs on Android
